1985 [XviD] reverted the changes in 1941 as XviD 1.3 cannot create AVI files > 2GB
1984 [AVI Muxer] changed default splitting size if opendml is disabled to 2000MB
1983 [Main Window] cosmetic adjustments
1982 [AVI Muxer] fixed a crash problem introduced in 1979
1981 changed ISO 639-2 language codes to ISO 639-2/T. Feature request #2811678
1980 [pre-rendering job] fixed a problem introduced in 1935
1979 [M2TS Muxer] added Blu-ray and AVCHD device output types. Feature request #1982670
     [AVI Muxer] added PC device output type which is unrestricted and corresponds to the old standard setting. 
                 the new standard output type is now enhanced for standalone devices so that e.g. opendml is disabled and splitting enforced. #1951705
     [Muxer] + [OneClick] the default device type used also for autoencode will be preselected. Feature request #2812862
     [AVI Muxer] + [M2TS Muxer] added mux script file content to the log
1978 [VideoEncoder] enhanced command line parser
1977 [XviD] added threads = 0 for automatic detection
1976 [XviD] custom commandline values have precedence
     [XviD] if possible -par x:y will be replaced with -par z
1975 [OneClick] removed resolution adjustement for AVC level enforcement
1974 [JobQueue] renamed column "codec" to "encoder"
1973 [Video Encoding] fixed not applying zones in first pass. Bug #3188275
1972 [MKV Muxer] fixed non-forced idx subtitle handling
     [MKV Muxer] cosmetics 
1971 [OneClick] corrected output height if autocrop is disabled
1970 [Update] some adjustements
1969 [Main Window] if video input avs file has also audio included add this file as audio track, too. Feature request #2918470
1968 [MKV Muxer] added forced track flag for subtitles
1967 [Update] save/restore size, location and column locations. Feature request #3079391
1966 [Worker] corrected wiki link. Patch by XhmikosR (#3186982)
1965 [Update] fixed a problem with the Nero AAC encoder update detection
     [Update] fixed a crash