@@ -1,3 +1,4 @@
+1986 [Audio Encoder] fall back to DirectShowSource() if FFAudioSource() cannot be used for AAC
 1985 [XviD] reverted the changes in 1941 as XviD 1.3 cannot create AVI files > 2GB
 1984 [AVI Muxer] changed default splitting size if opendml is disabled to 2000MB
 1983 [Main Window] cosmetic adjustments
